--- a/01-Android/app/src/main/res/values-en/otro-valores-ingles.xml
+++ b/01-Android/app/src/main/res/values-en/otro-valores-ingles.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="saludo">Hola Amigos!</string>
+    <color name="saludo_color">#2BA809</color>
 </resources>
