--- a/01-Android/app/src/main/res/values-en/otro-en-land.xml
+++ b/01-Android/app/src/main/res/values-en/otro-en-land.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="saludo_color">#2BA809</color>
+    <color name="saludo_color">#673AB7</color>
 </resources>
