--- a/01-Android/app/src/main/res/values-es/otro-es-port.xml
+++ b/01-Android/app/src/main/res/values-es/otro-es-port.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="saludo">Port EN!</string>
+    <color name="saludo_color">#009688</color>
 </resources>
