--- a/01-Android/app/src/main/res/values-en/otro-en-port.xml
+++ b/01-Android/app/src/main/res/values-en/otro-en-port.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="saludo_color">#CDDC39</color>
+
+    <color name="color_fondo">#F44336</color>
+    <color name="text_color">#CDDC39</color>
 </resources>
