--- a/01-Android/app/src/main/res/values-es/otro-es-land.xml
+++ b/01-Android/app/src/main/res/values-es/otro-es-land.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="saludo_color">#E91E63</color>
+
+    <color name="color_fondo">#F44336</color>
+    <color name="text_color">#E91E63</color>
 </resources>
